added top cover for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,20 @@ body {
     text-wrap: balance;
   }
 }
+
+@media screen and (min-device-width: 425px) and (max-device-width: 640px) {
+  .small_text {
+    font-size: 10px;
+  }
+  .midium_text {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 424px) {
+  .small_text {
+    font-size: 8px;
+  }
+  .midium_text {
+    font-size: 12px;
+  }
+}
